Update python-package.yml to fix qt error

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -47,6 +47,7 @@ jobs:
 
     - name: Test with unittest
       run: |
+        export QT_QPA_PLATFORM=offscreen
         python -m unittest discover tests
 
     - name: Build and deploy to PyPI
