--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -48,6 +48,7 @@ jobs:
     - name: Test with unittest
       run: |
         sudo apt-get install libxcb-xinerama0
+        sudo apt-get install libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xinerama0 libxcb-xfixes0 libegl1-mesa
         python -m unittest discover tests
 
     - name: Build and deploy to PyPI
