--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -50,6 +50,7 @@ jobs:
         sudo apt-get install libxcb-xinerama0
         pip uninstall opencv-python
         pip install opencv-python-headless
+        export QT_QPA_PLATFORM=offscreen
         python -m unittest discover tests
 
     - name: Build and deploy to PyPI
