--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     strategy:
       fail-fast: true
@@ -47,8 +47,6 @@ jobs:
 
     - name: Test with unittest
       run: |
-        sudo apt-get install libxcb-xinerama0
-        export QT_QPA_PLATFORM=xcb
         python -m unittest discover tests
 
     - name: Build and deploy to PyPI
