--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -16,7 +16,7 @@ on:
 jobs:
   build:
 
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     strategy:
       fail-fast: true
@@ -46,8 +46,12 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics 
 
     - name: Test with unittest
+      env:
+        QT_DEBUG_PLUGINS: 1
       run: |
-        python -m unittest discover tests
+        sudo apt install -y xvfb x11-utils libxkbcommon-x11-0
+        pip install coverage
+        sudo catchsegv xvfb-run --auto-servernum `which coverage` run -m unittest discover tests
 
     - name: Build and deploy to PyPI
       if: success() && github.ref == 'refs/heads/main' && github.event_name == 'push'
