--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -50,7 +50,8 @@ jobs:
         QT_DEBUG_PLUGINS: 1
       run: |
         sudo apt install -y xvfb x11-utils libxkbcommon-x11-0
-        pip install coverage
+        pip install pyside2 pytest coverage pytest-qt
+        ulimit -c unlimited
         sudo catchsegv xvfb-run --auto-servernum `which coverage` run -m unittest discover tests
 
     - name: Build and deploy to PyPI
