--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -46,13 +46,14 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics 
 
     - name: Test with unittest
-      env:
-        QT_DEBUG_PLUGINS: 1
       run: |
-        sudo apt install -y xvfb x11-utils libxkbcommon-x11-0
-        pip install pyside2 pytest coverage pytest-qt
-        ulimit -c unlimited
-        sudo catchsegv xvfb-run --auto-servernum `which coverage` run -m unittest discover tests
+        # Stuff copied wildly from several stackoverflow posts
+        sudo apt-get install -y xvfb libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xinerama0 libxcb-xinput0 libxcb-xfixes0 libxcb-shape0 libglib2.0-0 libgl1-mesa-dev
+        sudo apt-get install '^libxcb.*-dev' libx11-xcb-dev libglu1-mesa-dev libxrender-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev
+        # start xvfb in the background
+        sudo /usr/bin/Xvfb $DISPLAY -screen 0 1280x1024x24 &
+        python -m pip install coverage pytest pytest-qt
+        coverage run -m unittest discover tests
 
     - name: Build and deploy to PyPI
       if: success() && github.ref == 'refs/heads/main' && github.event_name == 'push'
