--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,6 +31,24 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+      
+    - name: Configure
+      run: cmake -Bbuild -T host=x64 -A x64
+
+    - name: Build
+      run: cmake --build build --config Debug -j4
+
+    - name: Install 7zip
+      run: choco install 7zip.install
+      
+    - name: Install Mesa
+      shell: cmd
+      run: |
+        curl.exe -L --output mesa.7z --url https://github.com/pal1000/mesa-dist-win/releases/download/20.3.2/mesa3d-20.3.2-release-msvc.7z
+        "C:\Program Files\7-Zip\7z.exe" x mesa.7z
+        mklink opengl32.dll "x64\opengl32.dll"
+        mklink libglapi.dll "x64\libglapi.dll"
+      working-directory: build\tests\Debug
 
     - name: Install dependencies
       run: |
@@ -49,12 +67,12 @@ jobs:
       run: |
         python -m unittest discover tests
 
-    - name: Build and deploy to PyPI
-      if: success() && github.ref == 'refs/heads/main' && github.event_name == 'push'
-      run: |
-        pip install setuptools wheel twine
-        python setup.py sdist bdist_wheel
-        twine upload --repository pypi dist/*
-      env:
-        TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+    # - name: Build and deploy to PyPI
+    #   if: success() && github.ref == 'refs/heads/main' && github.event_name == 'push'
+    #   run: |
+    #     pip install setuptools wheel twine
+    #     python setup.py sdist bdist_wheel
+    #     twine upload --repository pypi dist/*
+    #   env:
+    #     TWINE_USERNAME: __token__
+    #     TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
