--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -32,10 +32,14 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
+      
+    - name: Setup OpenGL              
+      uses: openrndr/setup-opengl@v1.1
+    - run: xvfb-run glxinfo
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
 
